完善发布配置

--- a/Server/appsettings.Development.json
+++ b/Server/appsettings.Development.json
@@ -9,8 +9,9 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:84",
   "ConnectionStrings": {
-    "qi": "host=47.96.41.13;port=5432;database=qi;user id=postgres;password=postgresql#;pooling=true;"
+    "qi": "host=47.96.41.13;port=5432;database=scd;user id=postgres;password=postgresql#;pooling=true;"
   },
+  "DotnetUrl": "http://localhost:84/",
   "FileServerPath": "http://localhost:85/",
-  "FileServerAbsolutePath": "D:\\Publish\\QI\\"
+  "FileServerAbsolutePath": "D:\\Publish\\SCD\\"
 }
