--- a/Server/appsettings.Production.json
+++ b/Server/appsettings.Production.json
@@ -7,10 +7,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:84",
+  "Urls": "http://*:1204",
   "ConnectionStrings": {
-    "qi": "host=47.96.41.13;port=5432;database=qi;user id=postgres;password=postgresql#;pooling=true;"
+    "qi": "host=47.96.41.13;port=5432;database=scd;user id=postgres;password=postgresql#;pooling=true;"
   },
-  "FileServerPath": "http://localhost:85/",
-  "FileServerAbsolutePath": "D:\\Publish\\QI\\"
+  "DotnetUrl": "http://47.96.41.13:1204/",
+  "FileServerPath": "http://47.96.41.13:1205/",
+  "FileServerAbsolutePath": "/var/file/"
 }
