--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Aspose.Cells" Version="21.8.0" />
     <PackageReference Include="Aspose.PDF" Version="21.8.0" />
     <PackageReference Include="Aspose.Words" Version="21.8.0" />
+    <PackageReference Include="hyjiacan.pinyin4net" Version="4.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.17" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
