更新组件，完善项目合同书，开始支持检测方案、报价单

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -12,5 +12,5 @@
     "qi": "host=47.96.41.13;port=5432;database=qi;user id=postgres;password=postgresql#;pooling=true;"
   },
   "FileServerPath": "http://localhost:85/",
-  "FileServerAbsolutePath": "D:\\Publish\\QI\\"
+  "FileServerAbsolutePath": "D:\\Publish\\SCD\\"
 }
