完善合同、签章

--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -61,6 +61,9 @@
     <None Update="Resources\检测专用章.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\检测专用章small.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
